--- a/ZNews/app/src/main/res/drawable/side_nav_bar.xml
+++ b/ZNews/app/src/main/res/drawable/side_nav_bar.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="@color/color_app_bar_text"
+        android:centerColor="#6B8900"
         android:endColor="@color/nav_bar_end"
         android:startColor="@color/nav_bar_start"
         android:type="linear" />
