--- a/ZNews/app/src/main/res/values/themes.xml
+++ b/ZNews/app/src/main/res/values/themes.xml
@@ -3,13 +3,13 @@
     <style name="Theme.ZNews" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/color_section</item>
+        <item name="colorPrimaryDark">@color/color_section</item>
         <item name="colorAccent">@color/colorAccent</item>
 
         <!-- Change Action Bar title text color  -->
-        <item name="titleTextColor">@color/color_app_bar_text</item>
-        <item name="subtitleTextColor">@color/color_app_bar_text</item>
+        <item name="titleTextColor">@color/color_section</item>
+        <item name="subtitleTextColor">@color/color_section</item>
 
         <!-- Set Navigation drawer icon color-->
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
@@ -29,25 +29,25 @@
 
     <!-- Theme of the settings -->
     <style name="SettingsTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">@color/color_section</item>
+        <item name="colorPrimaryDark">@color/color_section</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
     <!-- Set Navigation drawer icon color -->
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
-        <item name="color">@color/color_app_bar_text</item>
+        <item name="color">@color/color_section</item>
     </style>
 
     <!-- Change Action Bar overflow icon (Options Menu button) color -->
     <style name="MyOverflowButtonStyle" parent="Widget.AppCompat.ActionButton.Overflow">
-        <item name="android:tint">@color/color_app_bar_text</item>
+        <item name="android:tint">@color/color_section</item>
     </style>
 
     <!-- Style for a tab that displays a category name -->
     <style name="CategoryTab" parent="Widget.Design.TabLayout">
-        <item name="tabIndicatorColor">@color/color_app_bar_text</item>
-        <item name="tabSelectedTextColor">@color/color_app_bar_text</item>
+        <item name="tabIndicatorColor">@color/color_section</item>
+        <item name="tabSelectedTextColor">@color/color_section</item>
         <item name="tabTextAppearance">@style/CategoryTabTextAppearance</item>
     </style>
 
