Change news sources to VnExpress, add save news function, add user model, add sign in, add sign up, add splash, remove search function

--- a/ZNews/app/src/main/res/layout/fragment_home.xml
+++ b/ZNews/app/src/main/res/layout/fragment_home.xml
@@ -30,7 +30,8 @@
         style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true" />
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
