--- a/ZNews/app/src/main/res/menu/activity_main_drawer.xml
+++ b/ZNews/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,9 +16,9 @@
                 android:icon="@drawable/ic_menu_home"
                 android:title="@string/ic_title_home" />
             <item
-            android:id="@+id/nav_search"
-            android:icon="@drawable/ic_menu_search"
-            android:title="@string/ic_title_search" />
+            android:id="@+id/nav_saved"
+            android:icon="@drawable/ic_cloud"
+            android:title="@string/ic_title_saved" />
             <item
                 android:id="@+id/nav_weather"
                 android:icon="@drawable/ic_menu_weather"
