--- a/ZNews/app/src/main/res/values/themes.xml
+++ b/ZNews/app/src/main/res/values/themes.xml
@@ -6,7 +6,8 @@
         <item name="colorPrimary">@color/color_section</item>
         <item name="colorPrimaryDark">@color/color_section</item>
         <item name="colorAccent">@color/colorAccent</item>
-
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
         <!-- Change Action Bar title text color  -->
         <item name="titleTextColor">@color/color_section</item>
         <item name="subtitleTextColor">@color/color_section</item>
